@@ -20,6 +20,9 @@ Release 0.10.1 - unreleased
     (Contributed by navis, Committed by hyunsik)
 
   BUG FIXES
+
+    TAJO-1437: Resolve findbug warnings on Tajo JDBC Module.
+    (Contributed by Dongjoon Hyun, Committed by jihoon)
     
     TAJO-1440: Some tests fail in parallel test environment in TestKillQuery.
     (Contributed by Jongyoung Park. Committed by jinho)
